<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F7FA"
    tools:context=".activities.ForgotPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <!-- Main Container -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_type"
            android:orientation="vertical"
            android:padding="24dp">

            <!-- Title -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/txtForgotPass"
                android:textColor="#18005C"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:text="Nhập email đã đăng ký. Chúng tôi sẽ gửi liên kết để đặt lại mật khẩu."
                android:textColor="#7A7693"
                android:textSize="14sp"/>
            <!-- Image -->
            <ImageView
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_gravity="center"
                android:layout_marginTop="28dp"
                android:src="@mipmap/ic_launcher" />

            <!-- Email Label -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/txtForgotPass2"
                android:textColor="#18005C"
                android:textSize="14sp"
                android:textStyle="bold" />

            <!-- Email Input -->
            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edittext"
                android:hint="@string/hintEmail"
                android:inputType="textEmailAddress"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="#18005C"
                android:textColorHint="#9B97B0" />

            <!-- Reset Password Button -->
            <Button
                android:id="@+id/btnReset"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_button"
                android:text="@string/btnForgotPass"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />

            <!-- Back To Login -->
            <TextView
                android:id="@+id/btnBackLogin"
                android:layout_marginVertical="30dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Trở lại đăng nhập"
                android:textColor="#FF8C42"
                android:textSize="14sp"
                android:textStyle="bold" />


        </LinearLayout>

    </LinearLayout>

</LinearLayout>